[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# https://github.com/trishume/syntect?tab=readme-ov-file#pure-rust-fancy-regex-mode-without-onig
# The reason we use fancy-regex instead of onig is that 
# using onig isn't supported for wasm32-unknown-unknown
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
worker = "0.0.18"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
