[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.12.5"
# https://github.com/trishume/syntect?tab=readme-ov-file#pure-rust-fancy-regex-mode-without-onig
# The reason we use fancy-regex instead of onig is that 
# using onig isn't supported for wasm32-unknown-unknown
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
worker = "0.0.18"

cfg-if = "0.1.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
